// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Admin/FormsDocSidebar should allow a form to be reverted to the default layout 1`] = `"The form has been restored to the default template.<button type=\\"button\\" class=\\"components-button components-notice__action is-secondary\\">Undo</button>"`;

exports[`Admin/FormsDocSidebar should allow a form to be reverted to the default layout 2`] = `
Array [
  Object {
    "attributes": Object {
      "description": "",
      "field": "email",
      "id": "email_address",
      "label": "Email Address",
      "label_show_empty": false,
      "llms_visibility": "all",
      "llms_visibility_in": "",
      "llms_visibility_posts": "[]",
      "match": "email_address_confirm",
      "name": "email_address",
      "options": Array [],
      "options_preset": "",
      "placeholder": "",
      "required": true,
    },
    "innerBlocks": Array [],
    "isValid": true,
    "name": "llms/form-field-user-email",
    "originalContent": "",
    "validationIssues": Array [],
  },
  Object {
    "attributes": Object {
      "llms_visibility": "logged_out",
      "llms_visibility_in": "",
      "llms_visibility_posts": "[]",
    },
    "innerBlocks": Array [
      Object {
        "attributes": Object {
          "llms_visibility": "all",
          "llms_visibility_in": "",
          "llms_visibility_posts": "[]",
          "width": "50%",
        },
        "innerBlocks": Array [
          Object {
            "attributes": Object {
              "description": "",
              "field": "password",
              "id": "password",
              "label": "Password",
              "label_show_empty": false,
              "llms_visibility": "all",
              "llms_visibility_in": "",
              "llms_visibility_posts": "[]",
              "match": "password_confirm",
              "name": "password",
              "options": Array [],
              "options_preset": "",
              "placeholder": "",
              "required": true,
            },
            "innerBlocks": Array [],
            "isValid": true,
            "name": "llms/form-field-user-password",
            "originalContent": "",
            "validationIssues": Array [],
          },
        ],
        "isValid": true,
        "name": "core/column",
        "originalContent": "<div class=\\"wp-block-column\\" style=\\"flex-basis:50%\\"></div>",
        "validationIssues": Array [],
      },
      Object {
        "attributes": Object {
          "llms_visibility": "all",
          "llms_visibility_in": "",
          "llms_visibility_posts": "[]",
          "width": "50%",
        },
        "innerBlocks": Array [
          Object {
            "attributes": Object {
              "description": "",
              "field": "password",
              "id": "password_confirm",
              "label": "Confirm Password",
              "label_show_empty": false,
              "llms_visibility": "all",
              "llms_visibility_in": "",
              "llms_visibility_posts": "[]",
              "match": "password",
              "name": "password_confirm",
              "options": Array [],
              "options_preset": "",
              "placeholder": "",
              "required": true,
            },
            "innerBlocks": Array [],
            "isValid": true,
            "name": "llms/form-field-user-password-confirm",
            "originalContent": "",
            "validationIssues": Array [],
          },
        ],
        "isValid": true,
        "name": "core/column",
        "originalContent": "<div class=\\"wp-block-column\\" style=\\"flex-basis:50%\\"></div>",
        "validationIssues": Array [],
      },
    ],
    "isValid": true,
    "name": "core/columns",
    "originalContent": "<div class=\\"wp-block-columns\\"></div>",
    "validationIssues": Array [],
  },
  Object {
    "attributes": Object {
      "llms_visibility": "all",
      "llms_visibility_in": "",
      "llms_visibility_posts": "[]",
    },
    "innerBlocks": Array [
      Object {
        "attributes": Object {
          "llms_visibility": "all",
          "llms_visibility_in": "",
          "llms_visibility_posts": "[]",
          "width": "50%",
        },
        "innerBlocks": Array [
          Object {
            "attributes": Object {
              "description": "",
              "field": "text",
              "id": "first_name",
              "label": "First Name",
              "label_show_empty": false,
              "llms_visibility": "all",
              "llms_visibility_in": "",
              "llms_visibility_posts": "[]",
              "match": "",
              "name": "first_name",
              "options": Array [],
              "options_preset": "",
              "placeholder": "",
              "required": true,
            },
            "innerBlocks": Array [],
            "isValid": true,
            "name": "llms/form-field-user-first-name",
            "originalContent": "",
            "validationIssues": Array [],
          },
        ],
        "isValid": true,
        "name": "core/column",
        "originalContent": "<div class=\\"wp-block-column\\" style=\\"flex-basis:50%\\"></div>",
        "validationIssues": Array [],
      },
      Object {
        "attributes": Object {
          "llms_visibility": "all",
          "llms_visibility_in": "",
          "llms_visibility_posts": "[]",
          "width": "50%",
        },
        "innerBlocks": Array [
          Object {
            "attributes": Object {
              "description": "",
              "field": "text",
              "id": "last_name",
              "label": "Last Name",
              "label_show_empty": false,
              "llms_visibility": "all",
              "llms_visibility_in": "",
              "llms_visibility_posts": "[]",
              "match": "",
              "name": "last_name",
              "options": Array [],
              "options_preset": "",
              "placeholder": "",
              "required": true,
            },
            "innerBlocks": Array [],
            "isValid": true,
            "name": "llms/form-field-user-last-name",
            "originalContent": "",
            "validationIssues": Array [],
          },
        ],
        "isValid": true,
        "name": "core/column",
        "originalContent": "<div class=\\"wp-block-column\\" style=\\"flex-basis:50%\\"></div>",
        "validationIssues": Array [],
      },
    ],
    "isValid": true,
    "name": "core/columns",
    "originalContent": "<div class=\\"wp-block-columns\\"></div>",
    "validationIssues": Array [],
  },
  Object {
    "attributes": Object {
      "llms_visibility": "all",
      "llms_visibility_in": "",
      "llms_visibility_posts": "[]",
    },
    "innerBlocks": Array [
      Object {
        "attributes": Object {
          "llms_visibility": "all",
          "llms_visibility_in": "",
          "llms_visibility_posts": "[]",
          "width": "66.66%",
        },
        "innerBlocks": Array [
          Object {
            "attributes": Object {
              "description": "",
              "field": "text",
              "id": "llms_billing_address_1",
              "label": "Street Address",
              "label_show_empty": false,
              "llms_visibility": "all",
              "llms_visibility_in": "",
              "llms_visibility_posts": "[]",
              "match": "",
              "name": "llms_billing_address_1",
              "options": Array [],
              "options_preset": "",
              "placeholder": "",
              "required": true,
            },
            "innerBlocks": Array [],
            "isValid": true,
            "name": "llms/form-field-user-address",
            "originalContent": "",
            "validationIssues": Array [],
          },
        ],
        "isValid": true,
        "name": "core/column",
        "originalContent": "<div class=\\"wp-block-column\\" style=\\"flex-basis:66.66%\\"></div>",
        "validationIssues": Array [],
      },
      Object {
        "attributes": Object {
          "llms_visibility": "all",
          "llms_visibility_in": "",
          "llms_visibility_posts": "[]",
          "width": "33.33%",
        },
        "innerBlocks": Array [
          Object {
            "attributes": Object {
              "description": "",
              "field": "text",
              "id": "llms_billing_address_2",
              "label": "",
              "label_show_empty": true,
              "llms_visibility": "all",
              "llms_visibility_in": "",
              "llms_visibility_posts": "[]",
              "match": "",
              "name": "llms_billing_address_2",
              "options": Array [],
              "options_preset": "",
              "placeholder": "Apartment, suite, or unit",
              "required": false,
            },
            "innerBlocks": Array [],
            "isValid": true,
            "name": "llms/form-field-user-address-additional",
            "originalContent": "",
            "validationIssues": Array [],
          },
        ],
        "isValid": true,
        "name": "core/column",
        "originalContent": "<div class=\\"wp-block-column\\" style=\\"flex-basis:33.33%\\"></div>",
        "validationIssues": Array [],
      },
    ],
    "isValid": true,
    "name": "core/columns",
    "originalContent": "<div class=\\"wp-block-columns\\"></div>",
    "validationIssues": Array [],
  },
  Object {
    "attributes": Object {
      "description": "",
      "field": "text",
      "id": "llms_billing_city",
      "label": "City",
      "label_show_empty": false,
      "llms_visibility": "all",
      "llms_visibility_in": "",
      "llms_visibility_posts": "[]",
      "match": "",
      "name": "llms_billing_city",
      "options": Array [],
      "options_preset": "",
      "placeholder": "",
      "required": true,
    },
    "innerBlocks": Array [],
    "isValid": true,
    "name": "llms/form-field-user-address-city",
    "originalContent": "",
    "validationIssues": Array [],
  },
  Object {
    "attributes": Object {
      "llms_visibility": "all",
      "llms_visibility_in": "",
      "llms_visibility_posts": "[]",
    },
    "innerBlocks": Array [
      Object {
        "attributes": Object {
          "llms_visibility": "all",
          "llms_visibility_in": "",
          "llms_visibility_posts": "[]",
          "width": "40%",
        },
        "innerBlocks": Array [
          Object {
            "attributes": Object {
              "description": "",
              "field": "select",
              "id": "llms_billing_country",
              "label": "Country / Region",
              "label_show_empty": false,
              "llms_visibility": "all",
              "llms_visibility_in": "",
              "llms_visibility_posts": "[]",
              "match": "",
              "name": "llms_billing_country",
              "options": Array [],
              "options_preset": "countries",
              "placeholder": "",
              "required": true,
            },
            "innerBlocks": Array [],
            "isValid": true,
            "name": "llms/form-field-user-address-country",
            "originalContent": "",
            "validationIssues": Array [],
          },
        ],
        "isValid": true,
        "name": "core/column",
        "originalContent": "<div class=\\"wp-block-column\\" style=\\"flex-basis:40%\\"></div>",
        "validationIssues": Array [],
      },
      Object {
        "attributes": Object {
          "llms_visibility": "all",
          "llms_visibility_in": "",
          "llms_visibility_posts": "[]",
          "width": "35%",
        },
        "innerBlocks": Array [
          Object {
            "attributes": Object {
              "description": "",
              "field": "select",
              "id": "llms_billing_state",
              "label": "State / Province",
              "label_show_empty": false,
              "llms_visibility": "all",
              "llms_visibility_in": "",
              "llms_visibility_posts": "[]",
              "match": "",
              "name": "llms_billing_state",
              "options": Array [],
              "options_preset": "states",
              "placeholder": "",
              "required": true,
            },
            "innerBlocks": Array [],
            "isValid": true,
            "name": "llms/form-field-user-address-state",
            "originalContent": "",
            "validationIssues": Array [],
          },
        ],
        "isValid": true,
        "name": "core/column",
        "originalContent": "<div class=\\"wp-block-column\\" style=\\"flex-basis:35%\\"></div>",
        "validationIssues": Array [],
      },
      Object {
        "attributes": Object {
          "llms_visibility": "all",
          "llms_visibility_in": "",
          "llms_visibility_posts": "[]",
          "width": "25%",
        },
        "innerBlocks": Array [
          Object {
            "attributes": Object {
              "description": "",
              "field": "text",
              "id": "llms_billing_zip",
              "label": "Zip / Postal Code",
              "label_show_empty": false,
              "llms_visibility": "all",
              "llms_visibility_in": "",
              "llms_visibility_posts": "[]",
              "match": "",
              "name": "llms_billing_zip",
              "options": Array [],
              "options_preset": "",
              "placeholder": "",
              "required": true,
            },
            "innerBlocks": Array [],
            "isValid": true,
            "name": "llms/form-field-user-address-zip",
            "originalContent": "",
            "validationIssues": Array [],
          },
        ],
        "isValid": true,
        "name": "core/column",
        "originalContent": "<div class=\\"wp-block-column\\" style=\\"flex-basis:25%\\"></div>",
        "validationIssues": Array [],
      },
    ],
    "isValid": true,
    "name": "core/columns",
    "originalContent": "<div class=\\"wp-block-columns\\"></div>",
    "validationIssues": Array [],
  },
  Object {
    "attributes": Object {
      "description": "",
      "field": "tel",
      "id": "llms_phone",
      "label": "Phone Number",
      "label_show_empty": false,
      "llms_visibility": "all",
      "llms_visibility_in": "",
      "llms_visibility_posts": "[]",
      "match": "",
      "name": "llms_phone",
      "options": Array [],
      "options_preset": "",
      "placeholder": "",
      "required": false,
    },
    "innerBlocks": Array [],
    "isValid": true,
    "name": "llms/form-field-user-phone",
    "originalContent": "",
    "validationIssues": Array [],
  },
  Object {
    "attributes": Object {
      "description": "",
      "field": "text",
      "id": "llms_voucher",
      "label": "Have a voucher?",
      "label_show_empty": false,
      "llms_visibility": "all",
      "llms_visibility_in": "",
      "llms_visibility_posts": "[]",
      "match": "",
      "name": "llms_voucher",
      "options": Array [],
      "options_preset": "",
      "placeholder": "Voucher Code",
      "required": false,
      "toggleable": true,
    },
    "innerBlocks": Array [],
    "isValid": true,
    "name": "llms/form-field-redeem-voucher",
    "originalContent": "",
    "validationIssues": Array [],
  },
]
`;

exports[`Admin/FormsDocSidebar should allow a form to be reverted to the default layout 3`] = `
Array [
  Object {
    "attributes": Object {
      "description": "",
      "field": "email",
      "id": "email_address",
      "label": "Email Address",
      "label_show_empty": false,
      "llms_visibility": "all",
      "llms_visibility_in": "",
      "llms_visibility_posts": "[]",
      "match": "email_address_confirm",
      "name": "email_address",
      "options": Array [],
      "options_preset": "",
      "placeholder": "",
      "required": true,
    },
    "innerBlocks": Array [],
    "isValid": true,
    "name": "llms/form-field-user-email",
    "originalContent": "",
    "validationIssues": Array [],
  },
  Object {
    "attributes": Object {
      "llms_visibility": "logged_out",
      "llms_visibility_in": "",
      "llms_visibility_posts": "[]",
    },
    "innerBlocks": Array [
      Object {
        "attributes": Object {
          "llms_visibility": "all",
          "llms_visibility_in": "",
          "llms_visibility_posts": "[]",
          "width": "50%",
        },
        "innerBlocks": Array [
          Object {
            "attributes": Object {
              "description": "",
              "field": "password",
              "id": "password",
              "label": "Password",
              "label_show_empty": false,
              "llms_visibility": "all",
              "llms_visibility_in": "",
              "llms_visibility_posts": "[]",
              "match": "password_confirm",
              "name": "password",
              "options": Array [],
              "options_preset": "",
              "placeholder": "",
              "required": true,
            },
            "innerBlocks": Array [],
            "isValid": true,
            "name": "llms/form-field-user-password",
            "originalContent": "",
            "validationIssues": Array [],
          },
        ],
        "isValid": true,
        "name": "core/column",
        "originalContent": "<div class=\\"wp-block-column\\" style=\\"flex-basis:50%\\"></div>",
        "validationIssues": Array [],
      },
      Object {
        "attributes": Object {
          "llms_visibility": "all",
          "llms_visibility_in": "",
          "llms_visibility_posts": "[]",
          "width": "50%",
        },
        "innerBlocks": Array [
          Object {
            "attributes": Object {
              "description": "",
              "field": "password",
              "id": "password_confirm",
              "label": "Confirm Password",
              "label_show_empty": false,
              "llms_visibility": "all",
              "llms_visibility_in": "",
              "llms_visibility_posts": "[]",
              "match": "password",
              "name": "password_confirm",
              "options": Array [],
              "options_preset": "",
              "placeholder": "",
              "required": true,
            },
            "innerBlocks": Array [],
            "isValid": true,
            "name": "llms/form-field-user-password-confirm",
            "originalContent": "",
            "validationIssues": Array [],
          },
        ],
        "isValid": true,
        "name": "core/column",
        "originalContent": "<div class=\\"wp-block-column\\" style=\\"flex-basis:50%\\"></div>",
        "validationIssues": Array [],
      },
    ],
    "isValid": true,
    "name": "core/columns",
    "originalContent": "<div class=\\"wp-block-columns\\">

</div>",
    "validationIssues": Array [],
  },
  Object {
    "attributes": Object {
      "llms_visibility": "all",
      "llms_visibility_in": "",
      "llms_visibility_posts": "[]",
    },
    "innerBlocks": Array [
      Object {
        "attributes": Object {
          "llms_visibility": "all",
          "llms_visibility_in": "",
          "llms_visibility_posts": "[]",
          "width": "50%",
        },
        "innerBlocks": Array [
          Object {
            "attributes": Object {
              "description": "",
              "field": "text",
              "id": "first_name",
              "label": "First Name",
              "label_show_empty": false,
              "llms_visibility": "all",
              "llms_visibility_in": "",
              "llms_visibility_posts": "[]",
              "match": "",
              "name": "first_name",
              "options": Array [],
              "options_preset": "",
              "placeholder": "",
              "required": true,
            },
            "innerBlocks": Array [],
            "isValid": true,
            "name": "llms/form-field-user-first-name",
            "originalContent": "",
            "validationIssues": Array [],
          },
        ],
        "isValid": true,
        "name": "core/column",
        "originalContent": "<div class=\\"wp-block-column\\" style=\\"flex-basis:50%\\"></div>",
        "validationIssues": Array [],
      },
      Object {
        "attributes": Object {
          "llms_visibility": "all",
          "llms_visibility_in": "",
          "llms_visibility_posts": "[]",
          "width": "50%",
        },
        "innerBlocks": Array [
          Object {
            "attributes": Object {
              "description": "",
              "field": "text",
              "id": "last_name",
              "label": "Last Name",
              "label_show_empty": false,
              "llms_visibility": "all",
              "llms_visibility_in": "",
              "llms_visibility_posts": "[]",
              "match": "",
              "name": "last_name",
              "options": Array [],
              "options_preset": "",
              "placeholder": "",
              "required": true,
            },
            "innerBlocks": Array [],
            "isValid": true,
            "name": "llms/form-field-user-last-name",
            "originalContent": "",
            "validationIssues": Array [],
          },
        ],
        "isValid": true,
        "name": "core/column",
        "originalContent": "<div class=\\"wp-block-column\\" style=\\"flex-basis:50%\\"></div>",
        "validationIssues": Array [],
      },
    ],
    "isValid": true,
    "name": "core/columns",
    "originalContent": "<div class=\\"wp-block-columns\\">

</div>",
    "validationIssues": Array [],
  },
  Object {
    "attributes": Object {
      "llms_visibility": "all",
      "llms_visibility_in": "",
      "llms_visibility_posts": "[]",
    },
    "innerBlocks": Array [
      Object {
        "attributes": Object {
          "llms_visibility": "all",
          "llms_visibility_in": "",
          "llms_visibility_posts": "[]",
          "width": "66.66%",
        },
        "innerBlocks": Array [
          Object {
            "attributes": Object {
              "description": "",
              "field": "text",
              "id": "llms_billing_address_1",
              "label": "Street Address",
              "label_show_empty": false,
              "llms_visibility": "all",
              "llms_visibility_in": "",
              "llms_visibility_posts": "[]",
              "match": "",
              "name": "llms_billing_address_1",
              "options": Array [],
              "options_preset": "",
              "placeholder": "",
              "required": true,
            },
            "innerBlocks": Array [],
            "isValid": true,
            "name": "llms/form-field-user-address",
            "originalContent": "",
            "validationIssues": Array [],
          },
        ],
        "isValid": true,
        "name": "core/column",
        "originalContent": "<div class=\\"wp-block-column\\" style=\\"flex-basis:66.66%\\"></div>",
        "validationIssues": Array [],
      },
      Object {
        "attributes": Object {
          "llms_visibility": "all",
          "llms_visibility_in": "",
          "llms_visibility_posts": "[]",
          "width": "33.33%",
        },
        "innerBlocks": Array [
          Object {
            "attributes": Object {
              "description": "",
              "field": "text",
              "id": "llms_billing_address_2",
              "label": "",
              "label_show_empty": true,
              "llms_visibility": "all",
              "llms_visibility_in": "",
              "llms_visibility_posts": "[]",
              "match": "",
              "name": "llms_billing_address_2",
              "options": Array [],
              "options_preset": "",
              "placeholder": "Apartment, suite, or unit",
              "required": false,
            },
            "innerBlocks": Array [],
            "isValid": true,
            "name": "llms/form-field-user-address-additional",
            "originalContent": "",
            "validationIssues": Array [],
          },
        ],
        "isValid": true,
        "name": "core/column",
        "originalContent": "<div class=\\"wp-block-column\\" style=\\"flex-basis:33.33%\\"></div>",
        "validationIssues": Array [],
      },
    ],
    "isValid": true,
    "name": "core/columns",
    "originalContent": "<div class=\\"wp-block-columns\\">

</div>",
    "validationIssues": Array [],
  },
  Object {
    "attributes": Object {
      "description": "",
      "field": "text",
      "id": "llms_billing_city",
      "label": "City",
      "label_show_empty": false,
      "llms_visibility": "all",
      "llms_visibility_in": "",
      "llms_visibility_posts": "[]",
      "match": "",
      "name": "llms_billing_city",
      "options": Array [],
      "options_preset": "",
      "placeholder": "",
      "required": true,
    },
    "innerBlocks": Array [],
    "isValid": true,
    "name": "llms/form-field-user-address-city",
    "originalContent": "",
    "validationIssues": Array [],
  },
  Object {
    "attributes": Object {
      "llms_visibility": "all",
      "llms_visibility_in": "",
      "llms_visibility_posts": "[]",
    },
    "innerBlocks": Array [
      Object {
        "attributes": Object {
          "llms_visibility": "all",
          "llms_visibility_in": "",
          "llms_visibility_posts": "[]",
          "width": "40%",
        },
        "innerBlocks": Array [
          Object {
            "attributes": Object {
              "description": "",
              "field": "select",
              "id": "llms_billing_country",
              "label": "Country / Region",
              "label_show_empty": false,
              "llms_visibility": "all",
              "llms_visibility_in": "",
              "llms_visibility_posts": "[]",
              "match": "",
              "name": "llms_billing_country",
              "options": Array [],
              "options_preset": "countries",
              "placeholder": "",
              "required": true,
            },
            "innerBlocks": Array [],
            "isValid": true,
            "name": "llms/form-field-user-address-country",
            "originalContent": "",
            "validationIssues": Array [],
          },
        ],
        "isValid": true,
        "name": "core/column",
        "originalContent": "<div class=\\"wp-block-column\\" style=\\"flex-basis:40%\\"></div>",
        "validationIssues": Array [],
      },
      Object {
        "attributes": Object {
          "llms_visibility": "all",
          "llms_visibility_in": "",
          "llms_visibility_posts": "[]",
          "width": "35%",
        },
        "innerBlocks": Array [
          Object {
            "attributes": Object {
              "description": "",
              "field": "select",
              "id": "llms_billing_state",
              "label": "State / Province",
              "label_show_empty": false,
              "llms_visibility": "all",
              "llms_visibility_in": "",
              "llms_visibility_posts": "[]",
              "match": "",
              "name": "llms_billing_state",
              "options": Array [],
              "options_preset": "states",
              "placeholder": "",
              "required": true,
            },
            "innerBlocks": Array [],
            "isValid": true,
            "name": "llms/form-field-user-address-state",
            "originalContent": "",
            "validationIssues": Array [],
          },
        ],
        "isValid": true,
        "name": "core/column",
        "originalContent": "<div class=\\"wp-block-column\\" style=\\"flex-basis:35%\\"></div>",
        "validationIssues": Array [],
      },
      Object {
        "attributes": Object {
          "llms_visibility": "all",
          "llms_visibility_in": "",
          "llms_visibility_posts": "[]",
          "width": "25%",
        },
        "innerBlocks": Array [
          Object {
            "attributes": Object {
              "description": "",
              "field": "text",
              "id": "llms_billing_zip",
              "label": "Zip / Postal Code",
              "label_show_empty": false,
              "llms_visibility": "all",
              "llms_visibility_in": "",
              "llms_visibility_posts": "[]",
              "match": "",
              "name": "llms_billing_zip",
              "options": Array [],
              "options_preset": "",
              "placeholder": "",
              "required": true,
            },
            "innerBlocks": Array [],
            "isValid": true,
            "name": "llms/form-field-user-address-zip",
            "originalContent": "",
            "validationIssues": Array [],
          },
        ],
        "isValid": true,
        "name": "core/column",
        "originalContent": "<div class=\\"wp-block-column\\" style=\\"flex-basis:25%\\"></div>",
        "validationIssues": Array [],
      },
    ],
    "isValid": true,
    "name": "core/columns",
    "originalContent": "<div class=\\"wp-block-columns\\">



</div>",
    "validationIssues": Array [],
  },
  Object {
    "attributes": Object {
      "content": "Lorem ipsum",
      "dropCap": false,
      "llms_visibility": "all",
      "llms_visibility_in": "",
      "llms_visibility_posts": "[]",
    },
    "innerBlocks": Array [],
    "isValid": true,
    "name": "core/paragraph",
    "originalContent": "<p>Lorem ipsum</p>",
    "validationIssues": Array [],
  },
  Object {
    "attributes": Object {
      "description": "",
      "field": "text",
      "id": "llms_voucher",
      "label": "Have a voucher?",
      "label_show_empty": false,
      "llms_visibility": "all",
      "llms_visibility_in": "",
      "llms_visibility_posts": "[]",
      "match": "",
      "name": "llms_voucher",
      "options": Array [],
      "options_preset": "",
      "placeholder": "Voucher Code",
      "required": false,
      "toggleable": true,
    },
    "innerBlocks": Array [],
    "isValid": true,
    "name": "llms/form-field-redeem-voucher",
    "originalContent": "",
    "validationIssues": Array [],
  },
]
`;

exports[`Admin/FormsDocSidebar should display the location when open registration is disabled 1`] = `"<strong>Location</strong><strong>Registration</strong>"`;

exports[`Admin/FormsDocSidebar should display the location with a link when open registration is enabled 1`] = `"<strong>Location</strong><a class=\\"components-external-link\\" href=\\"/wp-admin/post.php?post=5&amp;action=edit\\" target=\\"_blank\\" rel=\\"external noreferrer noopener\\">Registration<span class=\\"components-visually-hidden\\">(opens in a new tab)</span><svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 24 24\\" width=\\"24\\" height=\\"24\\" class=\\"components-external-link__icon css-6wogo1-StyledIcon etxm6pv0\\" role=\\"img\\" aria-hidden=\\"true\\" focusable=\\"false\\"><path d=\\"M18.2 17c0 .7-.6 1.2-1.2 1.2H7c-.7 0-1.2-.6-1.2-1.2V7c0-.7.6-1.2 1.2-1.2h3.2V4.2H7C5.5 4.2 4.2 5.5 4.2 7v10c0 1.5 1.2 2.8 2.8 2.8h10c1.5 0 2.8-1.2 2.8-2.8v-3.6h-1.5V17zM14.9 3v1.5h3.7l-6.4 6.4 1.1 1.1 6.4-6.4v3.7h1.5V3h-6.3z\\"></path></svg></a>"`;
